Bug 1922222 - Move outer <svg> border/padding transform tweak. r=longsonr,jwatt

I think this was needed before bug 1924375 because it was applied as a
regular transform (not child-only transform) and thus was affected by
transform-origin and so on (which was not reset to 0 0 on the anon
frame). So this was basically undoing the effect of transform-origin I
believe.

Thus the right thing to do is:

 * Not trying to to undo the translation in SVGOuterSVGFrame.
 * Avoid doing it in the display list to begin with. This is what
   papered the issue without viewbox to begin with, the math just
   happened to add up when no scale was present.

This gets the right behavior and is less hacky. I think I convinced
myself this is the right thing to do, but it'd be nice to get another
pair of eyes.

Differential Revision: https://phabricator.services.mozilla.com/D225540